Fix minor checkbox alignment problem in WP 3.3
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@596883 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -66,6 +66,7 @@ input[type="checkbox"].ws_actor_access_checkbox /* Ensure we override WP default
 {
     margin-right: 2px;
     margin-left: 2px;
+    vertical-align: text-top;
 }
 
 /* The checkbox is only visible when viewing the menu configuration for a specific actor. */
